--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^3.1.3",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.3",
     "tailwindcss": "^3.4.9"
