--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/mdx": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.13.3",
+    "astro": "^4.15.4",
     "tailwindcss": "^3.4.9"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
