--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.13",
     "giscus": "^1.5.0",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sanitize-html": "^2.13.1",
     "tailwindcss": "^3.4.9"
   },
   "devDependencies": {
