--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.2",
-    "@astrojs/rss": "^4.0.10",
-    "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/mdx": "^4.1.0",
+    "@astrojs/rss": "^4.0.11",
+    "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "astro": "^5.0.4",
+    "astro": "^5.4.0",
     "markdown-it": "^14.1.0",
     "sanitize-html": "^2.13.1",
-    "tailwindcss": "^3.4.9"
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15"
