--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.2",
     "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.3.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
